nullaway_error_8556a7cf-302c-41d1-8b3a-36b750fc9b08.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/CustomProperty.java:121: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.value = ColorHelper.encode(Objects.requireNonNull(value));
               ^
    (see http://t.uber.com/nullaway )
